docker_deploy/kubernetes-stellan/examples/john2x/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wildcard-demo
  namespace: wildcard-demo
  labels:
    app: wildcard-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wildcard-demo
  template:
    metadata:
      labels:
        app: wildcard-demo
    spec:
      containers:
        - name: wildcard-demo
          image: john2x/wildcard-demo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: gunicorn
          resources:
            requests:
              cpu: 100m
              memory: 32Mi
