docker_deploy/kubernetes-stellan/examples/john2x/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wildcard-demo
  namespace: wildcard-demo
spec:
  type: ClusterIP
  selector:
    app: wildcard-demo
  ports:
    - port: 80
      targetPort: gunicorn
      name: http
