docker_deploy/kubernetes-stellan/examples/john2x/03-ingress-wildcard-demo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wildcard-demo-ingress
  namespace: wildcard-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: wildcard-demo.pinetreesquare.com
      http:
        paths:
          - path: /
            backend:
              serviceName: wildcard-demo
              servicePort: http
    - host: "*.wildcard-demo.pinetreesquare.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: wildcard-demo
              servicePort: http
