docker_deploy/kubernetes-stellan/examples/john2x/06-ingress-default-http-backend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-http-backend-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - secretName: default-http-backend-pinetreesquare-com-staging-tls
      hosts:
        - default-http-backend.pinetreesquare.com
  rules:
    - host: default-http-backend.pinetreesquare.com
      http:
        paths:
          - path: /
            backend:
              serviceName: default-http-backend
              servicePort: 80
