docker_deploy/kubernetes-stellan/examples/john2x/12-ingress-wildcard-demo-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-http-backend-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - secretName: default-http-backend-pinetreesquare-com-tls
      hosts:
        - default-http-backend.pinetreesquare.com
  rules:
    - host: default-http-backend.pinetreesquare.com
      http:
        paths:
          - path: /
            backend:
              serviceName: default-http-backend
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wildcard-demo-ingress
  namespace: wildcard-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - secretName: wildcard-demo-pinetreesquare-com-tls
      hosts:
        - wildcard-demo.pinetreesquare.com
        - "*.wildcard-demo.pinetreesquare.com"
  rules:
    - host: wildcard-demo.pinetreesquare.com
      http:
        paths:
          - path: /
            backend:
              serviceName: wildcard-demo
              servicePort: http
    - host: "*.wildcard-demo.pinetreesquare.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: wildcard-demo
              servicePort: http
